# easyDesktop

./: .gitignore  README.md  config.json  easyDesktop.py  easyDesktop_Installer.py  easyDesktop_Installer_v1.10.0.py  easyDesktop_Installer_v1.10.1.py  easyDesktop_Installer_v1.12.2.py  easyDesktop_Installer_v1.8.0.py  easyDesktop_Installer_v1.9.1.py  easyDesktop_Installer_v2.0.1.py  easyFileDesk.html  empty.html  o_easydesktop.py  pyproject.toml  requirements.in  test.html  window_effect.py
config/: __init__.py  app_config.py
resources/: all.min.css  ed.js  empty.xlsx  hotkey_record.js
src/: api.py  getIcon.py  group_mgr.py  icon_mgr.py  nonblocking.py  res_load.py  resize_win.py  screen.py  tool.py  ucfg.py  windowMgr.py
src/appAction/: app_action.py  report.py
theme/: dark.css  frame.css  light.css  zzz.css
