[project]
name = "easy-desktop"
version = "0.1.0"
description = "一款创新的桌面增强工具，让您在保持桌面整洁美观的同时，快速访问桌面文件"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bottle==0.13.4",
    "certifi==2025.7.14",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "clr-loader==0.2.7.post0",
    "darkdetect==0.8.0",
    "easygui==0.98.3",
    "icoextract==0.2.0",
    "idna==3.10",
    "keyboard==0.13.5",
    "mouseinfo==0.1.3",
    "pefile==2024.8.26",
    "pillow==11.3.0",
    "proxy-tools==0.1.0",
    "psutil==7.0.0",
    "pyautogui==0.9.54",
    "pycparser==2.22",
    "pygetwindow==0.0.9",
    "pymsgbox==1.0.9",
    "pyperclip==1.9.0",
    "pypinyin==0.55.0",
    "pyrect==0.2.0",
    "pyscreeze==1.0.1",
    "pystray==0.19.5",
    "pythonnet==3.0.5",
    "pytweening==1.2.0",
    "pywebview==5.4",
    "pywin32==311",
    "requests==2.32.4",
    "send2trash==1.8.3",
    "six==1.17.0",
    "typing-extensions==4.14.1",
    "urllib3==2.5.0",
]
