[project]
name = "easy-desktop"
version = "0.1.0"
description = "一款创新的桌面增强工具，让您在保持桌面整洁美观的同时，快速访问桌面文件"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "darkdetect==0.8.0",
    "easygui==0.98.3",
    "icoextract==0.2.0",
    "keyboard==0.13.5",
    "pillow==11.3.0",
    "pypinyin==0.55.0",
    "pystray==0.19.5",
    "pywebview==5.1",
    "pywin32==311",
    "requests==2.32.4",
    "send2trash==1.8.3",
]
